# eseed-math

./: CMakeLists.txt  readme.md
include/eseed/math/: concepts.hpp  mat.hpp  matops.hpp  ops.hpp  types.hpp  vec.hpp  vecops.hpp
test/: test.cpp
